# Movie-Predictor

./: .gitignore  chats.txt  main.py  mood_analyzer_windows.py  pyproject.toml  requirements.txt  stl.py  train.py
model/: bpe_tokenizer.json  label_encoder.pkl  model.pkl  vectorizer.pkl
